tests/test020.err
error: test020.tig:3:3: this expression should not produce a value
