tests/test020.tig
/* ERR: statement expected */
while 1 do
  43